# autonomous-tester

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
design/: architecture.md  class_diagram.md
example/api/: API_application.txt  auth_api_defect.py  auth_api_real.py
example/web_app/: app_defect.py  app_real.py  web_application.txt
example/web_app/templates/: index.html
src/autonomous_tester/: main.py
src/autonomous_tester/libs/: __init__.py
src/autonomous_tester/libs/common/: config.py  decorators.py  logger.py  task_manager.py
src/autonomous_tester/libs/crew_tools/: __init__.py  api_test_tool.py  browser_tool.py  requirements_tool.py
src/autonomous_tester/tester_crew/: tester_crew.py
src/autonomous_tester/tester_crew/config/: agents.yaml  task_collections.yaml  tasks.yaml
src/autonomous_tester/utils/: __init__.py  dot_dict.py
tests/: conftest.py
