[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autonomous-tester"
version = "0.1.0"
description = "An AI-powered autonomous software testing agent that generates test cases, executes browser-based tests, and detects defects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.5.5",
    "crewai[azure-ai-inference]>=1.9.3",
    "crewai-tools>=1.9.3",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "logging>=0.4.9.6",
    "ruff>=0.15.0",
    "fastapi>=0.128.4",
    "uvicorn>=0.40.0",
    "pytest>=9.0.2",
]

[project.scripts]
autonomous-tester = "autonomous_tester.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/autonomous_tester"]
